examples/test/testpolicy3534.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3534
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key5: value7
      key42: value13
      key22: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value10
          key0: value24
      podSelector:
        matchLabels:
          key4: value18
          key44: value25
          key21: value24
